changed bg color

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* testing to check if connected to github */
 
 body {
-    background-color: #ACECF7;
+    background-color: yellow;
 }
 
 .outer {
